<resources>
    <string name="app_name">Liquid Control</string>
    <string name="general_ui">General</string>
    <string name="user_interface">Interface</string>
    <string name="light_levels_title">Light Levels</string>
    <string name="lockscreen_options">Lockscreens</string>
    <string name="power_menu_optons">Powermenu</string>
    <string name="functionality">Functionality</string>
    <string name="power_saver">Powersaver</string>
    <string name="led_options">Led Options</string>
    <string name="statusbar">Statusbar</string>
    <string name="general">General</string>
    <string name="signal">Signal</string>
    <string name="toggles_layout">Toggles</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="nav_bar">Navigation</string>
    <string name="tools">Goodies</string>
    <string name="pt_performance">Performance</string>
    <string name="propmodder_title">Propmodder</string>
    <string name="open_recovery_title">Open Recovery Support</string>
    <string name="advanced_settings">Advanced</string>
    <string name="misc_short">Misc</string>
    <string name="system">System</string>
    <string name="drawables_main_screen_title">Images</string>
    <string name="meet_the_team">Meet TeamLiquid</string>
    <string name="about_title">About TeamLiquid</string>
    <string name="enable_navbar_title">Enable Navbar</string>
    <string name="navbar_width_title">Navbar Width</string>
    <string name="navbar_height_title">Navbar Height</string>
    <string name="title_pref_menu_display">Menu Location</string>
    <string name="summary_pref_menu_display">Position of menu button</string>
    <string name="navigation_bar">Navigation</string>
    <string name="navigation_bar_tint_title">Navbar Color</string>
    <string name="navigation_bar_glow_tint_title">Navbar Glow Color</string>
    <string name="navigation_bar_glow_tint_summary">Custom button press glow color</string>
    <string name="nav_button_background_color_title">Navbar Background Color</string>
    <string name="title_pref_navigation_menu_display">Menu Visibility</string>
    <string name="summary_pref_navigation_menu_display">Appearance of the menus</string>
    <string name="navbar_order_title">Button Order</string>
    <string name="navbar_order_summary">The order of your softkeys</string>
    <string name="enabled_navbar_buttons_title">Enabled Buttons</string>
    <string name="enabled_navbar_buttons_summary">Choose the desired softkeys</string>
    <string name="button_transparency_title">Button Transparency</string>
    <string name="long_press_home_title">Longpress Home</string>
    <string name="long_press_home_summary">Long pressing the home softkey</string>
    <string name="glow_times_title">Button Glow</string>
    <string name="glow_times_summary">Adjust button animation speeds</string>
    <string name="navbar_qty_title">Navigation bar buttons</string>
    <string name="navbar_qty_summary">Number of buttons</string>
    <string name="navbar_action_title">Button %1$s action &amp; icon</string>
    <string name="navbar_longpress_title">Button %1$s longpress action</string>
    <string name="navbar_button_cat">Navigation bar buttons</string>
    <string name="navbar_action_home">Home</string>
    <string name="navbar_action_back">Back</string>
    <string name="navbar_action_recents">Recents</string>
    <string name="navbar_action_search">Search</string>
    <string name="navbar_action_menu">Menu</string>
    <string name="navbar_action_kill">Kill task</string>
    <string name="navbar_action_power">Power</string>
    <string name="navbar_action_none">Empty</string>
    <string name="rotation_animation_delay_title">Rotation Delay</string>
    <string name="rotation_animation_delay_summary">Time which device must be stable</string>
    <string name="ime_switcher_title">IME Switcher</string>
    <string name="ime_switcher_summary">In statusbar, while typing</string>
    <string name="custom_carrier_label_title">Carrier Label</string>
    <string name="longpress_to_kill_title">App Killer</string>
    <string name="longpress_to_kill_summary">Holding back kills current activity</string>
    <string name="rotate_180_title">180° Rotation</string>
    <string name="rotate_180_summary">Allow your device to rotate upside down!</string>
    <string name="horizontal_recents_task_panel_title">Horizontal Recents</string>
    <string name="horizontal_recents_task_panel_summary">Use WebOS style task switcher</string>
    <string name="disable_bootanimation_title">Boot Animation</string>
    <string name="disable_bootanimation_summary">Disable boot animation for faster boot</string>
    <string name="disable_bugmailer_title">Android Bugmailer</string>
    <string name="disable_bugmailer_summary">Disable integrated bugmailer support</string>
    <string name="crt_animations_header">CRT Animations</string>
    <string name="crt_on_title">CRT animation is now enabled</string>
    <string name="crt_off_title">CRT animation is now disabled</string>
    <string name="sounds_category_title">Sounds</string>
    <string name="screenshot_sound_title">Screenshot</string>
    <string name="screenshot_sound_summary">Disable sound when capturing screen</string>
    <string name="enable_volume_options">Volume Options</string>
    <string name="disable_bootaudio_title">Disable boot audio</string>
    <string name="disable_bootaudio_summary">Quiet.</string>
    <string name="disable_bootaudio_summary_disabled">To enable boot audio, you must have an MP3 file at \n/system/media/boot_audio.mp3</string>
    <string name="title_pref_lockscreen_quad_targets">Quad Lockscreen</string>
    <string name="summary_pref_lockscreen_quad_targets">Four shortcuts on lockscreen</string>
    <string name="title_pref_lockscreen_octo_targets">Octo Lockscreen</string>
    <string name="summary_pref_lockscreen_octo_targets">Eight shortcuts on lockscreen</string>
    <string name="title_pref_lockscreen_menu_unlock">Menu Unlock</string>
    <string name="summary_pref_lockscreen_menu_unlock">Legacy menu icon unlocks screen</string>
    <string name="title_lockscreen_user_timeout_override">Lockscreen Timeout</string>
    <string name="summary_lockscreen_user_timeout_override">Default timeout after screen is off</string>
    <string name="show_lock_before_unlock_title">Show Before Unlock</string>
    <string name="show_lock_before_unlock_summary">Show lockscreen before secure unlock</string>
    <string name="lockscreen_battery_title">Battery Percent</string>
    <string name="lockscreen_battery_summary">Always show percentage on lockscreen</string>
    <string name="volume_wake_title">Volume Wake</string>
    <string name="volume_wake_summary">Tapping volume keys wakes phone</string>
    <string name="volume_music_controls_title">Volume Controls</string>
    <string name="volume_music_controls_summary">Longpress volume keys skips tracks</string>
    <string name="lockscreen_show_nav_title">Navigation Bar</string>
    <string name="lockscreen_show_nav_summary">Hide the navbar on the lockscreen</string>
    <string name="lockscreen_text_color_title">Lockscreen Text Color</string>
    <string name="custom_app_n_dialog_title">Choose Action For %1$s</string>
    <string name="custom_app_n">Custom Target %1$s</string>
    <string name="lockscreen_targets">Lockscreen Targets</string>
    <string name="lockscreen_action_unlock">Unlock</string>
    <string name="lockscreen_action_sound">Sound</string>
    <string name="lockscreen_action_camera">Camera</string>
    <string name="lockscreen_action_phone">Phone</string>
    <string name="lockscreen_action_mms">Messaging</string>
    <string name="lockscreen_action_none">Nothing</string>
    <string name="lockscreen_action_flashlight">Flashlight</string>
    <string name="lockscreen_landscape_title">Horizontal Lockscreen</string>
    <string name="lockscreen_landscape_summary">Enable horizontal lock orientation</string>
    <string name="lockscreen_quick_unlock_control_title">Quick Unlock</string>
    <string name="lockscreen_quick_unlock_control_summary">Unlock secure lock without enter</string>
    <string name="enable_fast_torch_title">Fast Torch</string>
    <string name="enable_fast_torch_summary">Screen is off, long-press power key</string>
    <string name="lockscreen_wallpaper_title">Lockscreen Wallpaper</string>
    <string name="lockscreen_wallpaper_summary">Remove wallpaper from menu above</string>
    <string name="title_show_airplane">Show Airplane</string>
    <string name="title_show_easteregg">Show Easteregg</string>
    <string name="title_show_flashlight">Show Flashlight</string>
    <string name="title_show_hidenavbar">Show Navigation</string>
    <string name="title_show_powersaver">Show Powersaver</string>
    <string name="title_show_profiles">Show Profiles</string>
    <string name="title_show_screenshot">Show Screenshot</string>
    <string name="title_pref_powersaving_pref_mode">Enable Powersaver</string>
    <string name="summary_pref_powersaving_pref_mode">@null</string>
    <string name="title_pref_powersaving_data_screen_off">Screen Off Action</string>
    <string name="summary_pref_powersaving_data_screen_off">Data state when screen turns off</string>
    <string name="title_pref_powersaving_data_screen_off_delay">Data Action Delay</string>
    <string name="summary_pref_powersaving_data_screen_off_delay">Delay of selected data action</string>
    <string name="title_pref_powersaving_sync_screen_off">Sync Action</string>
    <string name="summary_pref_powersaving_sync_screen_off">Auto sync data and contacts</string>
    <string name="title_pref_powersaving_sync_screen_off_delay">Time Interval</string>
    <string name="summary_pref_powersaving_sync_screen_off_delay">Current sync time interval</string>
    <string name="powersaver_data_cat">Data</string>
    <string name="powersaver_sync_cat">Sync</string>
    <string name="notification_pulse_title">Notification light</string>
    <string name="title_settings_behavior">Settings Behavior</string>
    <string name="statusbar_expanded_title">Statusbar Expanded</string>
    <string name="statusbar_unexpanded_title">Statusbar Unexpanded</string>
    <string name="summary_settings_behavior">Default behavior is long press</string>
    <string name="title_auto_hide_toggles">Autohide Toggles</string>
    <string name="summary_auto_hide_toggles">After collapse toggles will hide</string>
    <string name="title_date_behavior">Date Behavior</string>
    <string name="summary_date_behavior">Launch calender if checked alarm if not</string>
    <string name="title_status_bar_brightness_toggle">Brightness Control</string>
    <string name="summary_status_bar_brightness_toggle">Slide finger slowly across statusbar</string>
    <string name="adb_icon_title">Usb Debugging</string>
    <string name="adb_icon_summary">Hide adb debugging statusbar icon</string>
    <string name="statusbar_show_aosp_title">Settings</string>
    <string name="statusbar_show_aosp_summary">Hide settings statusbar icon</string>
    <string name="statusbar_show_liquid_control_title">Liquid Control</string>
    <string name="statusbar_show_liquid_control_summary">Hide Liquid Control statusbar icon</string>
    <string name="statusbar_show_date_title">Date</string>
    <string name="statusbar_show_date_summary">Hide date in pull down statusbar</string>
    <string name="statusbar_date_format_title">Date Format</string>
    <string name="statusbar_date_format_summary">Customize the statusbar date</string>
    <string name="statusbar_windowshade_background_title">Windowshade Color</string>
    <string name="statusbar_alpha_title">Transparency</string>
    <string name="statusbar_unexpanded_color_title">Statusbar Color</string>
    <string name="statusbar_layout">Drawer Layout</string>
    <string name="statusbar_layout_summary">Change notification drawer layout</string>
</resources>