<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:key="light_levels"
        android:title="@string/light_levels_title">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.liquid.control"
            android:targetClass="com.liquid.control.fragments.LightLevels" />
    </PreferenceScreen>

    <CheckBoxPreference
        android:key="disable_bootanimation"
        android:title="@string/disable_bootanimation_title"
        android:summary="@string/disable_bootanimation_summary" />

    <CheckBoxPreference
        android:key="disable_bugmailer"
        android:title="@string/disable_bugmailer_title"
        android:summary="@string/disable_bugmailer_summary" />

	<CheckBoxPreference
		android:key="rotate_180"
		android:title="@string/rotate_180_title"
		android:summary="@string/rotate_180_summary" />

	<CheckBoxPreference
		android:key="horizontal_recents_task_panel"
		android:title="@string/horizontal_recents_task_panel_title"
		android:summary="@string/horizontal_recents_task_panel_summary" />

	<PreferenceCategory
		android:key="crt"
		android:title="@string/crt_animations_header">

		<CheckBoxPreference
			android:key="crt_on"
			android:title="@string/crt_on_title" />

		<CheckBoxPreference
			android:key="crt_off"
			android:title="@string/crt_off_title" />

	</PreferenceCategory>

	<PreferenceCategory
		android:key="sounds"
		android:title="@string/sounds_category_title">

		<CheckBoxPreference
			android:key="screenshot_sound"
			android:title="@string/screenshot_sound_title"
			android:summary="@string/screenshot_sound_summary" />

        </PreferenceCategory>

	<PreferenceCategory
		android:key="misc"
		android:title="@string/misc_short">

		<CheckBoxPreference
			android:key="ime_switcher"
			android:title="@string/ime_switcher_title"
			android:summary="@string/ime_switcher_summary" />

		<Preference
			android:key="custom_carrier_label"
			android:title="@string/custom_carrier_label_title" />

		<CheckBoxPreference
			android:key="longpress_to_kill"
			android:title="@string/longpress_to_kill_title"
			android:summary="@string/longpress_to_kill_summary" />

		<ListPreference
			android:entries="@array/rotation_animation_delay_entries"
			android:entryValues="@array/rotation_animation_delay_values"
			android:key="rotation_animation_delay"
			android:title="@string/rotation_animation_delay_title"
			android:summary="@string/rotation_animation_delay_summary" />

                <!--*
                    * we can make this a ListPreference if we find a suitable reason
                    * we also need to decide what we what to do with new input event
                    * DISABLED TILL DECIDE WHAT TO DO WITH THE EVENT
                    *
                    * <CheckBoxPreference
                    *        android:key="longpress_app_tasker"
                    *        android:title="@string/longpress_app_tasker_title"
                    *        android:summary="@string/longpress_app_tasker_summary"
                    *        android:visible="false" />
                    *-->

	</PreferenceCategory>
</PreferenceScreen>
